// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header.styles BotaoMenu DEVE ser igual ao snapshot 1`] = `
.c0 {
  display: flex;
  align-items: center;
  gap: 16px;
  height: 64px;
  width: 100%;
  padding: 0 16px;
  color: rgba(255, 255, 255, 0.6);
  background: transparent;
  border: none;
  cursor: pointer;
}

.c0:hover {
  background: rgba(0, 0, 0, 0.35);
}

<div>
  <button
    class="c0"
  />
</div>
`;

exports[`Header.styles BotaoMenu DEVE ser igual ao snapshot QUANDO o $isActivated fo true 1`] = `
.c0 {
  display: flex;
  align-items: center;
  gap: 16px;
  height: 64px;
  width: 100%;
  padding: 0 16px;
  color: rgba(255, 255, 255, 0.6);
  background: rgba(0, 0, 0, 0.35);
  border: none;
  cursor: pointer;
}

.c0:hover {
  background: rgba(0, 0, 0, 0.35);
}

<div>
  <button
    class="c0"
  />
</div>
`;

exports[`Header.styles Container DEVE ser igual ao snapshot 1`] = `
.c0 {
  display: none;
  position: fixed;
  overflow: hidden;
  top: 0;
  bottom: 32px;
  width: 64px;
  height: 100vh;
  background: #21214c;
  transition: width 0.4s;
  z-index: 2;
}

@media screen and (min-width: 426px) and (max-width: 1023px) {
  .c0 {
    display: flex;
  }
}

<div>
  <aside
    class="c0"
  />
</div>
`;

exports[`Header.styles Container DEVE ser igual ao snapshot QUANDO $openMenu for true 1`] = `
.c0 {
  display: none;
  position: fixed;
  overflow: hidden;
  top: 0;
  bottom: 32px;
  width: 260px;
  height: 100vh;
  background: #21214c;
  transition: width 0.4s;
  z-index: 2;
}

@media screen and (min-width: 426px) and (max-width: 1023px) {
  .c0 {
    display: flex;
  }
}

<div>
  <aside
    class="c0"
  />
</div>
`;

exports[`Header.styles HeaderSidebar DEVE ser igual ao snapshot 1`] = `
.c0 {
  display: flex;
  align-items: center;
  height: 72px;
  padding: 0 20px;
  background: rgba(0, 0, 0, 0.15);
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Header.styles IconeHanburger DEVE ser igual ao snapshot 1`] = `
.c0 {
  display: flex;
  justify-content: space-around;
  flex-flow: column nowrap;
  width: 24px;
  height: 24px;
  padding: 0;
  border: none;
  outline: none;
  background-color: transparent;
  cursor: pointer;
  z-index: 100;
}

.c1 {
  width: 100%;
  height: 2px;
  background-color: #ffffff;
  border-radius: 8px;
  transform-origin: 2px;
  transition: all 0.3s linear;
}

.c2 {
  transform: rotate(0);
}

.c3 {
  opacity: 1;
}

.c4 {
  transform: rotate(0);
}

<div>
  <button
    class="c0"
    data-testid="test_hamburger"
  >
    <span
      class="c1 c2"
    />
    <span
      class="c1 c3"
    />
    <span
      class="c1 c4"
    />
  </button>
</div>
`;

exports[`Header.styles Imagem DEVE ser igual ao snapshot 1`] = `
.c0 {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 32px;
  height: 32px;
  box-sizing: border-box;
}

.c1 {
  display: flex;
  justify-content: center;
  align-items: center;
  pointer-events: auto;
  cursor: default;
}

<div>
  <div
    class="c0 "
    data-testid="container-image"
  >
    <svg
      class="c1"
      color="#ffffff"
      data-testid="svg"
      src="path/to/your.svg"
      style="fill: #ffffff; transform: rotate(0deg);"
    />
  </div>
</div>
`;

exports[`Header.styles Inner DEVE ser igual ao snapshot 1`] = `
.c0 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 260px;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Header.styles MenuSidebar DEVE ser igual ao snapshot 1`] = `
.c0 {
  position: relative;
  display: grid;
}

.c0::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  height: 64px;
  width: 4px;
  background: #6154f7;
  transition: top 0.5s;
}

<div>
  <nav
    class="c0"
  />
</div>
`;

exports[`Header.styles TextoBotao DEVE ser igual ao snapshot 1`] = `
.c0 {
  font-size: 18px;
  font-family: AvertaStd-Regular;
  color: #ffffff;
  margin-top: 0px;
  font-weight: 500;
  text-transform: none;
  cursor: text;
}

.c1 {
  margin-left: 32px;
}

.c2 {
  margin-left: 16px;
}

<div>
  <h3
    class="c0 c1 c2"
    color="#ffffff"
  />
</div>
`;

exports[`Header.styles TextoHeaderSidebar DEVE ser igual ao snapshot 1`] = `
.c0 {
  font-size: 18px;
  font-family: AvertaStd-Regular;
  color: #ffffff;
  margin-top: 0px;
  font-weight: 500;
  text-transform: none;
  cursor: text;
}

.c1 {
  margin-left: 32px;
}

<div>
  <h1
    class="c0 c1"
    color="#ffffff"
  />
</div>
`;
